<?xml version="1.0"?>
<package format="2">
  <name>akaze_features</name>
  <version>0.0.0</version>
  <description>akaze features</description>
  
  <maintainer email="pablofdezalc@gmail.com">Pablo F. Alcantarilla</maintainer>
  <author>Pablo F. Alcantarilla</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>

  </package>
