<package format="2">
  <name>orb_slam</name>
  <version>0.0.0</version>
  <description>orb_slam</description>
  
  <maintainer email="raulmur@unizar.es">Raul Mur-Artal</maintainer>
  <author>Raul Mur-Artal</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>suitesparse</depend>
  <depend>g2o</depend>
  <depend>dbow2</depend>
  <depend>Eigen3</depend>
  <depend>Cholmod</depend>

</package>
