<?xml version="1.0"?>
<package format="2">
  <name>pandora_slam_3d</name>
  <version>0.1.0</version>
  <description>Experimental 3D Slam package using ORB_SLAM</description>

  <maintainer email="kisamara@auth.gr">Konstantinos Samaras-Tsakiris</maintainer>

  <license>BSD</license>

  <author>Konstantinos Samaras-Tsakiris</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>orb_slam</depend>
  <depend>state_manager</depend>
  <depend>libuvc_camera</depend>
  <depend>roslint</depend>

</package>
